# deepnav_cvpr17

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt
common/include/: caffe_wrapper.h  common.h  hdf5_wrapper.h  sklearn_wrapper.h
common/src/: caffe_wrapper.cpp  common.cpp  hdf5_wrapper.cpp  sklearn_wrapper.cpp
data/dataset/atlanta/: bofa_test_locs.txt  box.txt  church_test_locs.txt  gas_station_test_locs.txt  high_school_test_locs.txt  mcdonalds_test_locs.txt
data/dataset/boston/: box.txt
data/dataset/chicago/: bofa_test_locs.txt  box.txt  church_test_locs.txt  gas_station_test_locs.txt  high_school_test_locs.txt  mcdonalds_test_locs.txt
data/dataset/dallas/: bofa_test_locs_far.txt  bofa_test_locs_medium.txt  bofa_test_locs_near.txt  box.txt  church_test_locs_far.txt  church_test_locs_medium.txt  church_test_locs_near.txt  gas_station_test_locs_far.txt  gas_station_test_locs_medium.txt  gas_station_test_locs_near.txt  high_school_test_locs_far.txt  high_school_test_locs_medium.txt  high_school_test_locs_near.txt  mcdonalds_test_locs_far.txt  mcdonalds_test_locs_medium.txt  mcdonalds_test_locs_near.txt
data/dataset/houston/: box.txt
data/dataset/los_angeles/: bofa_test_locs.txt  box.txt  church_test_locs.txt  gas_station_test_locs.txt  high_school_test_locs.txt  mcdonalds_test_locs.txt
data/dataset/new_york/: bofa_test_locs_far.txt  bofa_test_locs_medium.txt  bofa_test_locs_near.txt  box.txt  church_test_locs_far.txt  church_test_locs_medium.txt  church_test_locs_near.txt  gas_station_test_locs_far.txt  gas_station_test_locs_medium.txt  gas_station_test_locs_near.txt  high_school_test_locs_far.txt  high_school_test_locs_medium.txt  high_school_test_locs_near.txt  mcdonalds_test_locs_far.txt  mcdonalds_test_locs_medium.txt  mcdonalds_test_locs_near.txt
data/dataset/philadelphia/: box.txt
data/dataset/phoenix/: bofa_test_locs_far.txt  bofa_test_locs_medium.txt  bofa_test_locs_near.txt  box.txt  (+12 more)
ml/: .gitignore
ml/direction/: deploy.prototxt  get_plot.sh  solver.prototxt  train.sh  train_val.prototxt
ml/distance/: deploy.prototxt  get_plot.sh  solver.prototxt  sub.sed  train.sh  train_val.prototxt
ml/pair/: deploy.prototxt  get_plot.sh  solver.prototxt  train.sh  train_val.prototxt
python/: baseline.py  baseline_hog.py  bin_module.py  clear_dataset.sh  combine_datasets.py  deepnav.py  find_places.py  generate_test_locs.py  geo_utils.py  gist.py  lock_dataset.sh  path_imageset.py  plot_entropy.py  precompute_gist_feats.py  process_hdf5_file.py  test_image_api.py  test_info_api.py  url_utils.py
src/: test_caffe_wrapper.cpp  test_chance.cpp  test_cleaner.cpp  test_dataset_maker.cpp  test_entropy.cpp  test_eval.cpp  test_graph_maker.cpp  test_hdf5_wrapper.cpp  test_python.cpp  test_search.cpp  test_sklearn_wrapper.cpp  test_sort_nodes.cpp  test_tester.cpp
utils/: CMakeLists.txt
utils/include/: dataset_maker.h  dummy.h  eval.h  graph.h  graph_maker.h  search.h  tester.h
utils/src/: dataset_maker.cpp  eval.cpp  graph.cpp  graph_maker.cpp  search.cpp  tester.cpp
vis/: CMakeLists.txt
vis/include/: vis.h
vis/src/: vis.cpp
(+52 files in other folders)
